# trapchain

./: .gitignore  README.md  pyproject.toml
helm_files/: promtail_values.yaml
honeypots/cowrie/: deployment.yaml  service.yaml
honeypots/dionaea/: deployment.yaml  promtail_config-map.yaml  service.yaml
reports/: example_report.md
src/trapchain/: graph.py  main.py  settings.py
terraform/: main.tf
