[tool.poetry]
name = "trapchain"
version = "0.1.0"
description = ""
authors = ["Kevin Perdomo <kevinrp47@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "trapchain", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"
langchain-openai = "^0.3.14"
langchain-community = "^0.3.21"
langgraph = "^0.3.34"
pandas = "^2.2.3"
tabulate = "^0.9.0"
structlog = "^25.3.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
